// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bricks.Factory example docKit examples HTML5 components should render 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID1"
  style={Object {}}
  title={null}
>
  <Div
    id="uuID2"
    key="uuID2"
  >
     UU5.Bricks.Div - HTML5 div element
  </Div>
  <P
    id="uuID3"
    key="uuID3"
  >
    UU5.Bricks.P - HTML5 odstavec
  </P>
  <Paragraph
    id="uuID4"
    key="uuID4"
  />
  <UU5.Common.TextCorrectorContextConsumer
    key="3"
    text="Paragraph se chová podobně jako UU5.Bricks.P. Pokud je ale UU5.Bricks.Paragraph prázdný, vygeneruje do svého obsahu Lorem ipsum"
  />
  <br
    key="uu5-content-4"
  />
  <Span
    id="uuID5"
    key="uuID5"
  >
    UU5.Bricks.Span - HTML5 span
  </Span>
  <Mark
    id="uuID6"
    key="uuID6"
  >
    UU5.Bricks.Mark - zvýrazněný (podbarvený) text
  </Mark>
  <br
    key="uu5-content-7"
  />
  <Del
    id="uuID7"
    key="uuID7"
  >
    UU5.Bricks.Del - odstraněný text. Standardně se zobrazuje jako přeškrtnutý. Používá se např. při editaci textu více uživateli k zviditelnění změn.
  </Del>
  <br
    key="uu5-content-9"
  />
  <U
    id="uuID8"
    key="uuID8"
  >
    UU5.Bricks.U - podrtržený text 
  </U>
  <br
    key="uu5-content-11"
  />
  <Strong
    id="uuID9"
    key="uuID9"
  >
    UU5.Bricks.Strong - definuje důležitý text, standardně se zobrazuje tučně (bold)
  </Strong>
  <br
    key="uu5-content-13"
  />
  <Em
    id="uuID10"
    key="uuID10"
  >
    UU5.Bricks.Em - definuje zvýrazněný text, standardně se zobrazuje kurzívou (italic)
  </Em>
  <Pre
    id="uuID11"
    key="uuID11"
  >
    UU5.Bricks.Pre - zobrazení předformátovaného textu, zobrazuje se obvykle textem s pevnou šířkou znaku, zachovává mezery a konce řádků atp.
  </Pre>
  <Samp
    id="uuID12"
    key="uuID12"
  >
    UU5.Bricks.Samp - označuje vzorový, zejména textový výstup z nějakého programu. Používejte např. pro ukázky csv souborů, výstupy z terminálů atp.
  </Samp>
</div>
`;

exports[`Bricks.Factory example docKit otherLinks should render 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Component
    id="uuID1"
    key="uuID1"
  />
  <Component
    id="uuID2"
    key="uuID2"
  />
  <Component
    id="uuID3"
    key="uuID3"
  />
  <Component
    id="uuID4"
    key="uuID4"
  />
  <Component
    id="uuID5"
    key="uuID5"
  />
  <Component
    id="uuID6"
    key="uuID6"
  />
  <Component
    id="uuID7"
    key="uuID7"
  />
  <Component
    id="uuID8"
    key="uuID8"
  />
  <Component
    id="uuID9"
    key="uuID9"
  />
  <Component
    id="uuID10"
    key="uuID10"
  />
  <Component
    id="uuID11"
    key="uuID11"
  />
  <Component
    id="uuID12"
    key="uuID12"
  />
  <Component
    id="uuID13"
    key="uuID13"
  />
  <Component
    id="uuID14"
    key="uuID14"
  />
</div>
`;

exports[`Bricks.Factory example docKit unicorn Links should render 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Component
    id="uuID2"
    key="uuID2"
  />
  <Component
    id="uuID3"
    key="uuID3"
  />
  <Component
    id="uuID4"
    key="uuID4"
  />
  <Component
    id="uuID5"
    key="uuID5"
  />
</div>
`;

exports[`Bricks.Factory example docKit uuDOCKIT Links should render 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Component
    id="uuID1"
    key="uuID1"
  />
  <Component
    id="uuID2"
    key="uuID2"
  />
  <Component
    id="uuID3"
    key="uuID3"
  />
  <Component
    id="uuID4"
    key="uuID4"
  />
  <Component
    id="uuID5"
    key="uuID5"
  />
  <Component
    id="uuID6"
    key="uuID6"
  />
  <Component
    id="uuID7"
    key="uuID7"
  />
  <Component
    id="uuID8"
    key="uuID8"
  />
  <Component
    id="uuID9"
    key="uuID9"
  />
  <Component
    id="uuID10"
    key="uuID10"
  />
  <Component
    id="uuID11"
    key="uuID11"
  />
  <Component
    id="uuID12"
    key="uuID12"
  />
  <Component
    id="uuID13"
    key="uuID13"
  />
  <Component
    id="uuID14"
    key="uuID14"
  />
</div>
`;
